2008-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Test.cs: Add test case for methods 
	without IL and for GetHashCode (does not apply in both cases)

2008-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Test.cs: Re-enable test case since
	Marek fixed bug #389073

2008-05-11  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Test.Rules.Interoperability.mdp: Fix references.

2008-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Test.cs: New. Test cases for 
	DoNotCastIntPtrToInt32Rule.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeTest.cs
	* MarshalStringsInPInvokeDeclarationsTest.cs
	* PInvokeShouldNotBeVisibleTest.cs
	* UseManagedAlternativesToPInvokeTest.cs:
		Update unit tests wrt framework changes.

2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeTest.cs: More unit 
	tests by Andreas Noever to reduce false-positives.

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* MarshalStringsInPInvokeDeclarationsTest.cs: New. Unit tests
	from Daniel Abramov.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* UseManagedAlternativesToPInvokeTest.cs: New. Unit tests 
	from Daniel Abramov (with a bit more coverage by myself).

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Include new file in dist
	* Test.Rules.Interoperability.mdp: New. MonoDevelop project file.

2007-12-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* GetLastErrorMustBeCalledRightAfterPInvokeTest.cs: New. Unit tests 
	for GetLastErrorMustBeCalledRightAfterPInvokeRule by Andreas Noever
	* PInvokeShouldNotBeVisibleTest.cs: New. Unit tests for 
	PInvokeShouldNotBeVisibleRule by Andreas Noever
	* Makefile.am: New. Makefile for tests