@@ -2,9 +2,10 @@
 // Unit tests for PInvokeShouldNotBeVisibleRule
 //
 // Authors:
-//	Andreas Noever <andreas.noever@gmail.com>
+//	Sebastien Pouliot <sebastien@ximian.com>
 //
 //  (C) 2007 Andreas Noever
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -27,14 +28,13 @@
 //
 
 using System;
-using System.Reflection;
 using System.Runtime.InteropServices;
 
-using Gendarme.Framework;
-using Gendarme.Rules.Interoperability;
 using Mono.Cecil;
+using Gendarme.Rules.Interoperability;
 
 using NUnit.Framework;
+using Test.Rules.Fixtures;
 using Test.Rules.Helpers;
 
 namespace Test.Rules.Interoperability {
@@ -68,91 +68,72 @@ namespace Test.Rules.Interoperability {
 			[DllImport ("User32.dll")]
 			public static extern Boolean MessageBeepPublic (UInt32 beepType); //ok
 		}
+
+		// special cases - we'll be modified (static removed) before their use
+
+		[DllImport ("User32.dll")]
+		internal static extern Boolean InstanceInternal (UInt32 beepType); //bad1
+		
+		[DllImport ("User32.dll")]
+		public static extern Boolean InstancePublic (UInt32 beepType); //bad2
 	}
 	
 	[TestFixture]
-	public class PInvokeShouldNotBeVisibleRuleTest {
-
-		private PInvokeShouldNotBeVisibleRule rule;
-		private TestRunner runner;
-		private AssemblyDefinition assembly;
-		private TypeDefinition internalType;
-		private TypeDefinition publicType;
-		private TypeDefinition internalType_PublicNested;
-		private TypeDefinition publicType_PublicNested;
-		private TypeDefinition publicType_InternalNested;
-		
+	public class PInvokeShouldNotBeVisibleTest : MethodRuleTestFixture<PInvokeShouldNotBeVisibleRule> {
 
 		[TestFixtureSetUp]
-		public void FixtureSetUp ()
+		public void SetUp ()
 		{
-			string unit = Assembly.GetExecutingAssembly ().Location;
-			assembly = AssemblyFactory.GetAssembly (unit);
-			internalType = assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokeInternal"];
-			publicType = assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokePublic"];
-			internalType_PublicNested = assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokeInternal"].NestedTypes [0];
-			publicType_PublicNested = assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokePublic"].NestedTypes [0];
-			publicType_InternalNested = assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokePublic"].NestedTypes [1];
-			rule = new PInvokeShouldNotBeVisibleRule ();
-			runner = new TestRunner (rule);
-		}
-
-		private MethodDefinition GetTest (TypeDefinition type, string name)
-		{
-			foreach (MethodDefinition method in type.Methods) {
-				if (method.Name == name)
-					return method;
+			// since C# compiler won't compile an instance p/invoke we'll need to hack our own
+			AssemblyDefinition assembly = DefinitionLoader.GetAssemblyDefinition<PInvokePublic> ();
+			foreach (MethodDefinition method in assembly.MainModule.Types ["Test.Rules.Interoperability.PInvokePublic"].Methods) {
+				if (method.Name.StartsWith ("Instance"))
+					method.IsStatic = false;
 			}
-			return null;
 		}
 
 		[Test]
-		public void TestInternal_Internal ()
+		public void NonVisibleType_NonVisibleMethod ()
 		{
-			MethodDefinition method = GetTest (internalType, "MessageBeepInternal");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
+			AssertRuleSuccess<PInvokeInternal> ("MessageBeepInternal");
 		}
 
 		[Test]
-		public void TestInternal_Public ()
+		public void NonVisibleType_VisibleMethod ()
 		{
-			MethodDefinition method = GetTest (internalType, "MessageBeepPublic");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
+			AssertRuleSuccess<PInvokeInternal> ("MessageBeepPublic");
 		}		
 		
 		[Test]
-		public void TestInternal_PublicNested()
+		public void NonVisibleNestedType_VisibleMethod ()
 		{
-			MethodDefinition method = GetTest (internalType_PublicNested, "MessageBeepPublic");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
+			AssertRuleSuccess<PInvokeInternal.Public> ("MessageBeepPublic");
+			AssertRuleSuccess<PInvokePublic.Internal> ("MessageBeepPublic");
 		}
 		
 		[Test]
-		public void TestPublic_Internal ()
+		public void VisibleType_NonVisibleMethod ()
 		{
-			MethodDefinition method = GetTest (publicType, "MessageBeepInternal");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
+			AssertRuleSuccess<PInvokePublic> ("MessageBeepInternal");
 		}
 
 		[Test]
-		public void TestPublic_Public ()
+		public void VisibleType_VisibleMethod ()
 		{
-			MethodDefinition method = GetTest (publicType, "MessageBeepPublic");
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
+			AssertRuleFailure<PInvokePublic> ("MessageBeepPublic", 1);
 		}		
 		
 		[Test]
-		public void TestPublic_PublicNested ()
+		public void VisibleNestedType_VisibleMethod ()
 		{
-			MethodDefinition method = GetTest (publicType_PublicNested, "MessageBeepPublic");
-			Assert.AreEqual (RuleResult.Failure, runner.CheckMethod (method));
+			AssertRuleFailure<PInvokePublic.Public> ("MessageBeepPublic", 1);
 		}
-		
+
 		[Test]
-		public void TestPublic_InternalNested ()
+		public void Instance ()
 		{
-			MethodDefinition method = GetTest (publicType_InternalNested, "MessageBeepPublic");
-			Assert.AreEqual (RuleResult.Success, runner.CheckMethod (method));
+			AssertRuleFailure<PInvokePublic> ("InstanceInternal", 1);
+			AssertRuleFailure<PInvokePublic> ("InstancePublic", 2);
 		}
 	}
 }
